RESOLVED FIXED12369
REGRESSION (r19027): amazon.com home page crashes WebKit r19028 debug build
https://bugs.webkit.org/show_bug.cgi?id=12369
Summary REGRESSION (r19027): amazon.com home page crashes WebKit r19028 debug build
David Kilzer (:ddkilzer)
Reported 2007-01-22 12:05:33 PST
Summary: Going to amazon.com crashes WebKit. Steps to reproduce: 1. Open Safari/WebKit. 2. Go to URL: http://amazon.com/ Expected results: Browser shouldn't crash. Actual results: Browser crashes. Regression: Not tested yet, but I'm pretty sure this doesn't happen in shipping Safari 2.0.4 (419.3) on Mac OS X 10.4.8 (8N1037). Notes: Tested with locally-built debug build of WebKit r19028 with Safari 2.0.4 (419.3) on Mac OS X 10.4.8 (8N1037). Console output: Segmentation fault Will attach stack trace next.
Attachments
Stack trace (6.66 KB, text/plain)
2007-01-22 12:07 PST, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2007-01-22 12:07:10 PST
Created attachment 12611 [details] Stack trace
mitz
Comment 2 2007-01-22 13:18:57 PST
RenderText::setStyle() does not protect oldStyle but tries to access it after RenderObject::setStyle().
Darin Adler
Comment 3 2007-01-22 13:34:25 PST
Committed revision 19031.
David Kilzer (:ddkilzer)
Comment 4 2007-06-24 12:04:47 PDT
Mass removal of NeedsRadar keyword from my bugs that have already been RESOLVED.
Note You need to log in before you can comment on or make changes to this bug.