        Reviewed by Beth.

- fix http://bugs.webkit.org/show_bug.cgi?id=12369
          REGRESSION (r19027): amazon.com home page crashes WebKit r19028 debug build

        I caused this a few hours ago. Oops!

        * rendering/RenderText.cpp: (WebCore::RenderText::setStyle):
        Compute whether the font changed before calling RenderObject::setStyle.



git-svn-id: svn://svn.chromium.org/blink/trunk@19031 bbb929c8-8fbe-4397-9dbb-9b2b20218538