third_party/WebKit/WebCore/rendering/RenderText.cpp
@@ -79,6 +79,8 @@ void RenderText::setStyle(RenderStyle* newStyle)
     if (oldStyle == newStyle)
         return;
 
+    bool fontChanged = !oldStyle || oldStyle->font() != newStyle->font();
+
     ETextTransform oldTransform = oldStyle ? oldStyle->textTransform() : TTNONE;
     ETextSecurity oldSecurity = oldStyle ? oldStyle->textSecurity() : TSNONE;
 
@@ -88,7 +90,7 @@ void RenderText::setStyle(RenderStyle* newStyle)
         if (RefPtr<StringImpl> textToTransform = originalText())
             setText(textToTransform.release(), true);
 
-    if (!oldStyle || oldStyle->font() != newStyle->font())
+    if (fontChanged)
         updateMonospaceCharacterWidth();
 }
 
